--- a/scrolling-parallax/demo1/index.html
+++ b/scrolling-parallax/demo1/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Scrolling Parallax</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
